# quest-shadowplay

./: .gitignore  ANDROID_BUILD.md  CODE_EXPLANATION.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  build_android.sh
android/: AndroidManifest.xml
examples/: demo.rs
src/: config.rs  error.rs  lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: capture_android.rs  commands.rs  main.rs  state.rs
src-tauri/src/capture/: android.rs  macos.rs  mod.rs  simulated.rs
src-tauri/src/capture/macos_native/: mod.rs
src-tauri/swift/: CaptureController.swift  build.sh
src/buffer/: mod.rs  ring_buffer.rs
src/capture/: frame.rs  mod.rs  openxr_layer.rs
src/encoder/: mod.rs
src/input/: mod.rs
src/storage/: mod.rs
ui/: app.js  index.html  style.css
