[package]
name = "quest-shadowplay"
version = "0.1.0"
edition = "2021"
description = "Replay buffer for Meta Quest 3 - capture and save the last 10 seconds of VR gameplay"
license = "MIT"
authors = ["Quest Shadowplay Team"]

# Build as a shared library that Android can load
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# ============================================
# CORE DEPENDENCIES
# ============================================

[dependencies]
# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Image processing (pure Rust, no native deps)
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# ============================================
# ANDROID-SPECIFIC (only compiled for Android)
# ============================================

[target.'cfg(target_os = "android")'.dependencies]
# Android logging
android_logger = "0.14"

# Android NDK bindings
ndk = "0.9"
ndk-context = "0.1"

# JNI for Java interop
jni = "0.21"

# ============================================
# DEVELOPMENT DEPENDENCIES
# ============================================

[dev-dependencies]
# For testing
tempfile = "3.15"

# ============================================
# BUILD CONFIGURATION
# ============================================

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

# ============================================
# FEATURES
# ============================================

[features]
default = []
# Enable OpenXR support (requires OpenXR SDK)
openxr = []
# Enable Android-specific features
android = []
