[package]
name = "quest-shadowplay-app"
version = "0.1.0"
description = "VR Replay Buffer for Meta Quest 3"
authors = ["Quest Shadowplay Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Our core library
quest-shadowplay = { path = ".." }

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
parking_lot = "0.12"

# Image processing for thumbnails
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific
jni = "0.21"
ndk = "0.9"
ndk-context = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

